# wh-pa

./: .gitignore  README.md  america-first-policy-directive-to-the-secretary-of-state.json  america-first-policy-directive-to-the-secretary-of-state.md  america-first-trade-policy.json  america-first-trade-policy.md  application-of-protecting-americans-from-foreign-adversary-controlled-applications-act-to-tiktok.json  application-of-protecting-americans-from-foreign-adversary-controlled-applications-act-to-tiktok.md  cabinet-and-cabinet-level-appointments.json  cabinet-and-cabinet-level-appointments.md  clarifying-the-militarys-role-in-protecting-the-territorial-integrity-of-the-united-states.json  clarifying-the-militarys-role-in-protecting-the-territorial-integrity-of-the-united-states.md  declaring-a-national-emergency-at-the-southern-border-of-the-united-states.json  declaring-a-national-emergency-at-the-southern-border-of-the-united-states.md  declaring-a-national-energy-emergency.json  declaring-a-national-energy-emergency.md  declassification-of-records-concerning-the-assassinations-of-president-john-f-kenned.json  declassification-of-records-concerning-the-assassinations-of-president-john-f-kennedy.json  declassification-of-records-concerning-the-assassinations-of-president-john-f-kennedy.md  defending-women-from-gender-ideology-extremism-and-restoring-biological-truth-to-the-federal-government.json  defending-women-from-gender-ideology-extremism-and-restoring-biological-truth-to-the-federal-government.md  designation-of-acting-leaders.json  (+120 more)
src/: config.py  (+3 more)
(+1498 files in other folders)
