[project]
name = "wh-pa"
author = "michael bommarito <michael.bommarito@gmail.com>"
version = "0.1.0"
description = "monitor and summarize white house summaries"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "alea-llm-client>=0.1.2",
    "alea-preprocess>=0.1.12",
    "httpx[http2]>=0.28.1",
    "lxml>=5.3.0",
    "tqdm>=4.67.1",
]
